Fixed overflow

--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -4,6 +4,7 @@
   align-items: center;
   margin-left: 20px;
   margin-right: 20px;
+  max-width: 100%;
 }
 
 #Bonton {
@@ -16,7 +17,7 @@
 }
 
 #FirstSide {
-  width: 700px;
+  width: 100%;
   height: 700px;
   align-self: right;
 }
@@ -41,7 +42,7 @@
 }
 
 #Deda {
-  width: 300px;
+  width: 600px;
   height: 300px;
   align-self: center;
   margin-top: -50px;
@@ -49,6 +50,9 @@
 }
 
 #AgencyText{
+  padding-left: 30px;
+  padding-top: 40px;
+  padding-right: 20px;
   margin-top: -110px;
 }
 
@@ -56,8 +60,8 @@
   width: 430px;
   height: 500px;
   border-radius: 10px;
-  margin-right: 150px;
-  margin-left: 0px;
+  margin-right: 120px;
+  margin-left: 5px;
   margin-bottom: 100px;
   
 }
@@ -115,8 +119,8 @@ width: 100;
 #FirstSide{
   margin-top: -40px;
   margin-right: -150px;
-  height: 500px;
-  width: 500px;
+  height: 400px;
+  width: 400px;
 }
 
 #LastCard{
@@ -175,3 +179,10 @@ h4 {
   border-radius: 5px 5px 0 0;
   }
 
+#BostonFarmsHeader {
+  width: 580px
+}
+
+#container2 {
+  margin-left: 60;
+}
